clusters/home/default/dashy2/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy2
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: dashy2
  sessionAffinity: None
