clusters/home/default/dashy2/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashy2
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.dashy2.mockus.xyz`)
      kind: Rule
      services:
        - name: dashy2
          port: 80
    - match: Host(`dashy2.mockus.xyz`)
      kind: Rule
      services:
        - name: dashy2
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: mockus-xyz-tls
